Tüm HTML sayfalarına adanas.png favicon eklendi

--- a/html/gelir-gider.html
+++ b/html/gelir-gider.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADASO - Gelir-Gider</title>
     <link rel="stylesheet" href="../css/anasayfa.css">
+    <link rel="icon" type="image/png" href="../adanas.png">
+    <link rel="shortcut icon" type="image/png" href="../adanas.png">
+    <link rel="apple-touch-icon" href="../adanas.png">
     <style>
         .status.visited { background: #d4edda; color: #155724; }
         .status.not-visited { background: #f8d7da; color: #721c24; }
