--- a/html/sifre-degistir.html
+++ b/html/sifre-degistir.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADASO - Şifre Değiştir</title>
     <link rel="stylesheet" href="../css/anasayfa.css">
+    <link rel="icon" type="image/png" href="../adanas.png">
+    <link rel="shortcut icon" type="image/png" href="../adanas.png">
+    <link rel="apple-touch-icon" href="../adanas.png">
     <style>
         .password-container {
             max-width: 500px;
