--- a/html/ziyaretler.html
+++ b/html/ziyaretler.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADASO - Ziyaretler</title>
     <link rel="stylesheet" href="../css/anasayfa.css">
+    <link rel="icon" type="image/png" href="../adanas.png">
+    <link rel="shortcut icon" type="image/png" href="../adanas.png">
+    <link rel="apple-touch-icon" href="../adanas.png">
     <style>
         .status.completed { background: #d4edda; color: #155724; }
         .status.planned { background: #fff3cd; color: #856404; }
