CSS ve JS dosya yolları düzeltildi

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Giriş/Kayıt Sistemi</title>
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="icon" type="image/png" href="../adanas.png">
-    <link rel="shortcut icon" type="image/png" href="../adanas.png">
-    <link rel="apple-touch-icon" href="../adanas.png">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" type="image/png" href="adanas.png">
+    <link rel="shortcut icon" type="image/png" href="adanas.png">
+    <link rel="apple-touch-icon" href="adanas.png">
 </head>
 <body>
     <div class="login-wrapper">
         <div class="logo-section">
             <div class="logo-container">
-                <img src="../adanas.png" class="logo-img" alt="ADASO Logo">
+                <img src="adanas.png" class="logo-img" alt="ADASO Logo">
                 <h1 class="logo-title">ADASO</h1>
                 <br>
                 <h1 class="logo-title">Firma Takip Sistemine Giriş</h1>
@@ -83,6 +83,6 @@
         </div>
     </div>
     
-    <script src="../js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
