--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Giriş/Kayıt Sistemi</title>
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="icon" type="image/png" href="../adanas.png">
+    <link rel="shortcut icon" type="image/png" href="../adanas.png">
+    <link rel="apple-touch-icon" href="../adanas.png">
 </head>
 <body>
     <div class="login-wrapper">
