Add: Notification system with real-time visit reminders and toast notifications

--- a/anasayfa.html
+++ b/anasayfa.html
@@ -63,6 +63,7 @@
         <div class="page-header">
             <h2>📊 Anasayfa</h2>
             <p class="page-subtitle">Genel bakış ve önemli veriler</p>
+            <button onclick="notificationSystem.addTestNotification()" style="background: #B22222; color: white; border: none; padding: 8px 16px; border-radius: 6px; cursor: pointer; margin-left: 10px;">Test Bildirimi</button>
         </div>
         <div class="stats-container">
             <div class="stat-card" onclick="window.location.href='firmalar.html'" style="cursor: pointer;">
@@ -117,6 +118,8 @@
         </div>
     </div>
     
+    <link rel="stylesheet" href="../css/notifications.css">
+    <script src="../js/notifications.js"></script>
     <script src="../js/anasayfa.js"></script>
 </body>
 </html>
