--- a/gelir-gider.html
+++ b/gelir-gider.html
@@ -526,5 +526,7 @@
             if (e.key === 'Enter') searchRecords();
         });
     </script>
+    <link rel="stylesheet" href="../css/notifications.css">
+    <script src="../js/notifications.js"></script>
 </body>
 </html>
