--- a/profil.html
+++ b/profil.html
@@ -208,6 +208,8 @@
         </div>
     </div>
     
+    <link rel="stylesheet" href="../css/notifications.css">
+    <script src="../js/notifications.js"></script>
     <script src="../js/profil.js"></script>
 </body>
 </html>
