--- a/raporlar.html
+++ b/raporlar.html
@@ -150,6 +150,8 @@
     </div>
 
     
+    <link rel="stylesheet" href="../css/notifications.css">
+    <script src="../js/notifications.js"></script>
     <script src="../js/raporlar.js"></script>
 </body>
 </html>
