--- a/ziyaretler.html
+++ b/ziyaretler.html
@@ -255,6 +255,8 @@
         </div>
     </div>
     
+    <link rel="stylesheet" href="../css/notifications.css">
+    <script src="../js/notifications.js"></script>
     <script src="../js/ziyaretler.js"></script>
 </body>
 </html>
