--- a/ayarlar.html
+++ b/ayarlar.html
@@ -133,6 +133,8 @@
         </div>
     </div>
     
+    <link rel="stylesheet" href="../css/notifications.css">
+    <script src="../js/notifications.js"></script>
     <script src="../js/ayarlar.js"></script>
 </body>
 </html>
