--- a/firmalar.html
+++ b/firmalar.html
@@ -220,6 +220,8 @@
         </div>
     </div>
     
+    <link rel="stylesheet" href="../css/notifications.css">
+    <script src="../js/notifications.js"></script>
     <script src="../js/firmalar.js"></script>
 </body>
 </html>
