Fix: Şifre doğrulama sistemi tamamen yeniden yazıldı - Event listener'lar düzeltildi

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <input type="text" id="kayitAdSoyad" class="tall-input" placeholder="Ad Soyad" required />
             <input type="email" id="kayitEmail" class="tall-input" placeholder="E-posta" required />
             <input type="text" id="kayitKullanici" class="tall-input" placeholder="Kullanıcı Adı" required />
-            <input type="password" id="kayitSifre" class="tall-input" placeholder="Şifre Oluşturun" required oninput="checkPasswordStrength()" />
-            <input type="password" id="kayitSifre2" class="tall-input" placeholder="Şifreyi Doğrulayın" required oninput="checkPasswordMatch()" />
+            <input type="password" id="kayitSifre" class="tall-input" placeholder="Şifre Oluşturun" required />
+            <input type="password" id="kayitSifre2" class="tall-input" placeholder="Şifreyi Doğrulayın" required />
             <div id="passwordRequirements" class="password-requirements">
                 <div id="req-length" class="requirement">• En az 6 karakter</div>
                 <div id="req-upper" class="requirement">• En az 1 büyük harf</div>
@@ -66,8 +66,8 @@
                 <p class="modal-desc">Kullanıcı adınızı veya e-posta adresinizi girin</p>
                 <input type="text" id="sifreUnuttumKullanici" class="modal-input" placeholder="Kullanıcı Adı veya E-posta" required />
                 <div id="yeniSifreAlani" class="password-fields" style="display: none;">
-                    <input type="password" id="yeniSifre" class="modal-input" placeholder="Yeni Şifre" required oninput="checkModalPasswordStrength()" />
-                    <input type="password" id="yeniSifre2" class="modal-input" placeholder="Yeni Şifre Tekrar" required oninput="checkModalPasswordMatch()" />
+                    <input type="password" id="yeniSifre" class="modal-input" placeholder="Yeni Şifre" required />
+                    <input type="password" id="yeniSifre2" class="modal-input" placeholder="Yeni Şifre Tekrar" required />
                     <div id="modalPasswordRequirements" class="password-requirements" style="margin-left: 0px;">
                         <div id="modal-req-length" class="requirement">• En az 6 karakter</div>
                         <div id="modal-req-upper" class="requirement">• En az 1 büyük harf</div>
