Fix: Şifre değiştirme sayfasında sadece şifre eşleşme kriteri bırakıldı

--- a/sifre-degistir.html
+++ b/sifre-degistir.html
@@ -191,12 +191,8 @@
                     <div class="form-group">
                         <label class="form-label">Yeni Şifre Tekrar:</label>
                         <input type="password" class="form-input" id="confirmPassword" placeholder="Yeni şifrenizi tekrar girin" required>
-                        <div id="passwordRequirements" style="margin-top: 8px; font-size: 0.8rem;">
-                            <div id="lengthReq" style="color: #dc3545;">• En az 8 karakter</div>
-                            <div id="upperReq" style="color: #dc3545;">• En az 1 büyük harf</div>
-                            <div id="lowerReq" style="color: #dc3545;">• En az 1 küçük harf</div>
-                            <div id="numberReq" style="color: #dc3545;">• En az 1 rakam</div>
-                            <div id="matchReq" style="color: #dc3545;">• Şifreler aynı olmalı</div>
+                        <div id="passwordRequirements" style="margin-top: 8px; font-size: 0.9rem;">
+                            <div id="matchReq" style="color: #dc3545; font-weight: 500; padding: 4px 0;">• Şifreler uyuşuyor</div>
                         </div>
                     </div>
 
